@@ -1,5 +1,11 @@
 2004-06-08  Bruno Haible  <bruno@clisp.org>
 
+	* clos-methcomb1.lisp (method-combination): Reorder slots.
+	* clos-methcomb2.lisp (define-method-combination): Don't set
+	:identity-with-one-argument with long-form method-combination.
+
+2004-06-08  Bruno Haible  <bruno@clisp.org>
+
 	* clos-methcomb2.lisp (short-form-method-combination-expander):
 	Remove useless typecase.
 	(long-form-method-combination-expander): Likewise. The user-defined
